--- a/public/styles.css
+++ b/public/styles.css
@@ -78,10 +78,10 @@ ul li {
     overflow: hidden;
     background-color: 	#303030;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    margin: 40px;
   }
   
 .topnav a {
-    /* float: left; */
     display: block;
     color:whitesmoke;
     text-align: center;
@@ -185,7 +185,6 @@ ul li {
 
 #navAccount {
     float: right;
-    margin-right: 45px;
 }
 
 /*////////////Form Styling//////////*/
@@ -660,7 +659,6 @@ select {
 }
 
 .displayTabcontent {
-    /* display: none; */
     background-color: white;
     color: 	#303030;
     padding: 12px 12px;
