--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,7 @@ body {
 h1 {
 font-family: 'Overlock', cursive;
 font-size: 72px;
-text-shadow: 2px 3px rgba(0,0,0,0.2);
+text-shadow: 0px 8px 16px rgba(0,0,0,0.2);
 }
 
 p {
