--- a/public/styles.css
+++ b/public/styles.css
@@ -15,13 +15,6 @@ font-size: 72px;
 text-shadow: 0px 8px 16px rgba(0,0,0,0.2);
 }
 
-.intro {
-    border: 3px solid #303030;
-    background: white;
-    margin: 0px 300px 0px 300px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 0px;
-}
 
 p {
     margin: 50px;
@@ -251,7 +244,31 @@ form {
     box-sizing: border-box;
 }
 
+.drawerDelete a {
+    margin: 10px;
+}
+
+.editAsset {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 50px;
+    background-color: rgba(0,0,0,0.5);
+}
+  
+.editAsset * {
+    box-sizing: border-box;
+}
+
 .addDrawer {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 50px;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.delete {
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
@@ -318,6 +335,10 @@ form {
     letter-spacing: .09em;
     text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
+}
+
+#delete-overlaybutton {
+    background: red; 
 }
 
 /*////////////Overlay Styling//////////*/
@@ -477,6 +498,20 @@ select {
     width: 400px;
 }
 
+#deleteoverlay {
+    position: fixed; 
+    display: none;
+    width: 100%; 
+    height: 100%; 
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
+}
+
 #loginoverlay {
     position: fixed; 
     display: none;
@@ -533,6 +568,20 @@ select {
     cursor: pointer; 
 }
 
+#edit-assetoverlay {
+    position: fixed; 
+    display: none;
+    width: 100%; 
+    height: 100%; 
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
+}
+
 #assetoverlay {
     position: fixed; 
     display: none;
@@ -561,6 +610,16 @@ select {
     cursor: pointer; 
 }
 
+#editAssetForm{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    z-index: 2;
+}
+
 #updateAccountForm{
     position: absolute;
     top: 50%;
@@ -572,6 +631,16 @@ select {
 }
 
 #addAccountForm{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    z-index: 2;
+}
+
+#deleteForm{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -660,14 +729,6 @@ select {
     padding: 12px 12px;
     border: 1px solid #ccc;
     border-top: none;
-}
-
-.displayTabcontent {
-    background-color: white;
-    color: 	#303030;
-    padding: 12px 12px;
-    border: 5px solid #2980b9;
-    margin: 0 50px 50px 50px;
 }
 
 .assettabcontent {
@@ -852,8 +913,7 @@ select {
 }
 
 .icon {
-    color: #707070;
-    align-content: right;
+    color: #ddd;
     padding: 5px;
 }
   
