--- a/public/styles.css
+++ b/public/styles.css
@@ -306,7 +306,7 @@ form {
     padding: 18px;
     font-size: 24px;
     text-transform: uppercase;
-    text-align: center;
+    text-align: left;
     color: whitesmoke;
 }
   
