--- a/public/styles.css
+++ b/public/styles.css
@@ -205,6 +205,14 @@ form {
     background-color: rgba(0,0,0,0.5);
 }
 
+.logoff {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 50px;
+    background-color: rgba(0,0,0,0.5);
+}
+
 .updateAccount {
     width: 100%;
     max-width: 1200px;
@@ -362,6 +370,15 @@ form {
 }
 
 #updated-last-name {
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 18px;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
+    width: 400px;
+}
+
+#login-user-name {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
@@ -571,6 +588,20 @@ select {
     cursor: pointer; 
 }
 
+#logoffoverlay {
+    position: fixed; 
+    display: none;
+    width: 100%; 
+    height: 100%; 
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
+}
+
 #update-accountoverlay {
     position: fixed; 
     display: none;
@@ -696,6 +727,16 @@ select {
 }
 
 #loginForm{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    z-index: 2;
+}
+
+#logoffForm{
     position: absolute;
     top: 50%;
     left: 50%;
