updated responsive styling

--- a/public/styles.css
+++ b/public/styles.css
@@ -1018,6 +1018,11 @@ select {
 
     h2 {
         margin: 25px;
+        font-size: 18px;
+    }
+
+    img {
+        max-width: 150px;
     }
 }
 
