--- a/public/styles.css
+++ b/public/styles.css
@@ -1020,10 +1020,6 @@ select {
         margin: 25px;
         font-size: 18px;
     }
-
-    img {
-        max-width: 150px;
-    }
 }
 
 @media screen and (min-width: 600px) {
@@ -1058,6 +1054,9 @@ select {
 @media screen and (min-width: 900px) {
     .cell {
       width: 25%;
+    }
+    h2 {
+        font-size: 24px;
     }
 }
 
