--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,7 @@ p {
     margin: 50px;
 }
 
+
 #header {
     display: grid;
     text-align: center;
@@ -27,6 +28,22 @@ p {
 
 ul li {
     list-style-type: none;
+}
+
+.heres-how {
+    width: 50%;
+    background-color: #303030;
+    color: whitesmoke;
+    font-size: 17px;
+    margin-bottom: 50px;
+    padding: 15px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    cursor: pointer;
+}
+
+.heres-how:hover {
+    background-color: whitesmoke;
+    color: #303030;
 }
 
 .container {
@@ -188,6 +205,30 @@ ul li {
 form {
     text-align: center;
 }
+
+.close-form {
+    background-color: transparent;
+    color: whitesmoke;
+    font-size: 17px;
+    border: none;
+    padding: 25px;
+    position: absolute; top:0; right:0;
+    cursor: pointer;
+}
+
+.close-form:hover {
+    background-color: whitesmoke;
+    color: #303030;
+}
+
+.directions {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 50px;
+    background-color: rgba(0,0,0,0.5);
+}
+
 
 .addChild {
     width: 100%;
@@ -352,6 +393,18 @@ form {
 
 /*////////////Overlay Styling//////////*/
 
+.directions-heading {
+    color: whitesmoke;
+    font-size: 24px;
+    text-decoration: strong;
+    text-align: left;
+    margin-left: 0px;
+}
+
+.directions-item {
+    color: whitesmoke;
+    font-size: 17px;
+}
 #first-name {
     padding: 10px;
     margin-top: 5px;
@@ -561,6 +614,21 @@ select {
     width: 400px;
 }
 
+#directionsoverlay {
+    position: fixed; 
+    display: none;
+    width: 100%; 
+    height: 100%; 
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
+}
+
+
 #deleteoverlay {
     position: fixed; 
     display: none;
@@ -698,6 +766,16 @@ select {
 }
 
 #updateAccountForm{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    z-index: 2;
+}
+
+#directionsForm{
     position: absolute;
     top: 50%;
     left: 50%;
