updated styles and reconnected the connect image form

--- a/public/styles.css
+++ b/public/styles.css
@@ -391,6 +391,11 @@ form {
     background: red; 
 }
 
+#delete-name {
+    max-width: 800px;
+    text-align: center;
+}
+
 /*////////////Overlay Styling//////////*/
 
 .directions-heading {
