--- a/public/styles.css
+++ b/public/styles.css
@@ -10,14 +10,14 @@ body {
 }
 
 h1 {
-font-family: 'Overlock', cursive;
-font-size: 72px;
-text-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    font-family: 'Overlock', cursive;
+    font-size: 72px;
+    text-shadow: 0px 8px 16px rgba(0,0,0,0.2);
 }
 
 
 p {
-    margin: 50px;
+    margin: 30px;
 }
 
 
@@ -35,7 +35,7 @@ ul li {
     background-color: #303030;
     color: whitesmoke;
     font-size: 17px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     padding: 15px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     cursor: pointer;
@@ -44,10 +44,41 @@ ul li {
 .heres-how:hover {
     background-color: whitesmoke;
     color: #303030;
+    border: 2px solid darkturquoise;
+}
+
+.account-section {
+    display: grid;
+    justify-items: center;
+}
+
+.login-button {
+    width: 50%;
+    background-color: #303030;
+    color: whitesmoke;
+    font-size: 17px;
+    padding: 15px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    cursor: pointer;
+}
+
+.login-button:hover {
+    background-color: whitesmoke;
+    color: #303030;
+    border: 2px solid darkturquoise;
 }
 
 .container {
     padding-bottom: 30px;
+}
+
+.new-account a {
+    color: #303030;
+}
+
+.new-account a:hover {
+    color: darkturquoise;
+    font-style: bold;
 }
 
 .grid {
@@ -92,8 +123,8 @@ ul li {
     overflow: hidden;
     background-color: 	#303030;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    margin: 40px;
-  }
+    margin: 30px;
+}
   
 .topnav a {
     display: block;
@@ -103,10 +134,15 @@ ul li {
     text-decoration: none;
     font-size: 17px;
 }
+
+.hideNav {
+    display: none;
+}
   
 .topnav a:hover {
     background-color:whitesmoke;
     color: 	#303030;
+    border: 2px solid darkturquoise;
 }
   
 .topnav a.active {
@@ -142,6 +178,7 @@ ul li {
 .topnav .search-container button:hover {
     background:whitesmoke;
     color: 	#303030;
+    border: 2px solid darkturquoise;
 }
 
 .dropdown {
@@ -168,14 +205,13 @@ ul li {
     position: absolute;
     background-color:	#303030;
     color: whitesmoke;
-    border: 1px solid 	#303030;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    background-color: 	#303030;
+    background-color: #303030;
     color:whitesmoke;
     padding: 12px 16px;
     text-decoration: none;
@@ -187,8 +223,8 @@ ul li {
 
 .dropdown-content a:hover {
     background-color: whitesmoke;
+    border: 2px solid darkturquoise;
     color: 	#303030;
-    border: none;
     display: block;
 }
 
@@ -410,6 +446,12 @@ form {
     color: whitesmoke;
     font-size: 17px;
 }
+
+.feedback-messages {
+    background-color: red;
+    font-size: 18px;
+}
+
 #first-name {
     padding: 10px;
     margin-top: 5px;
@@ -1091,18 +1133,83 @@ select {
 
 /*////////////Responsive Styling//////////*/
 
-@media screen and (min-width: 350px) {
+@media screen and (max-width: 320px) {
     .flex-outer {
         display: block;
+        padding: 0px;
     }
 
     .form-title {
-        font-size: 28px;
+        font-size: 18px;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .dropdown .dropbtn {
+        padding: 5px;
+        font-size: 14px;
+        float: right;
+    }
+
+    .topnav a {
+        font-size: 14px;
+        padding: 5px;
     }
 
     h2 {
         margin: 25px;
         font-size: 18px;
+    }
+
+    .flex-outer li label {
+        font-size: 18px;
+        padding: 5px;
+    }
+
+    .directions {
+        padding: 10px;
+    }
+
+    .directions-item {
+        font-size: 14px;
+        text-align: center;
+    }
+
+    .directions-heading {
+        text-align: center;
+        margin: 0 auto;
+        font-size: 18px;
+    }
+
+    #directionsoverlay {
+        padding-top: 25px;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    #directionsForm {
+        height: 90%;
+        overflow: scroll;
+    }
+
+    #connectAssetForm {
+        height: 90%;
+        overflow: scroll;
+    }
+
+    #assetoverlay {
+        padding-top: 25px;
+        /* width: 80%; */
+        margin: 0 auto;
+    }
+
+    .uploadAsset {
+        padding: 10px;
+    }
+
+    li {
+        font-size: 14px;
     }
 
     .google-image {
@@ -1141,8 +1248,9 @@ select {
 
 @media screen and (min-width: 900px) {
     .cell {
-      width: 25%;
+        width: 25%;
     }
+
     h2 {
         font-size: 24px;
     }
@@ -1158,7 +1266,7 @@ select {
       text-align: left;
       width: 100%;
       margin: 0;
-      padding: 14px;
+      /* padding: 14px; */
     }
     .topnav input[type=text] {
       border: 1px solid aliceblue;  
