--- a/public/styles.css
+++ b/public/styles.css
@@ -135,9 +135,9 @@ ul li {
 }
   
 .topnav a {
-    display: block;
+    /* display: block; */
     color:whitesmoke;
-    text-align: center;
+    /* text-align: center; */
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -200,7 +200,7 @@ ul li {
 
 .dropdown .dropbtn {
     font-size: 16px; 
-    padding: 14px 16px;
+    /* padding: 14px 16px; */
     background-color: inherit;
     font-family: inherit; 
     margin: 0;
@@ -213,7 +213,7 @@ ul li {
     position: absolute;
     background-color:	#303030;
     color: whitesmoke;
-    min-width: 160px;
+    /* min-width: 160px; */
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -1024,7 +1024,7 @@ select {
 .child-nav {
     background-color:#303030;
     color: whitesmoke;
-    padding: 16px;
+    padding: 5px;
     font-size: 16px;
     border: none;
     cursor: pointer;
