--- a/public/styles.css
+++ b/public/styles.css
@@ -1463,6 +1463,35 @@ select {
     .google-snippet {
         font-size: 14px;
     }
+
+    .asset {
+        width: 354px;
+    }
+
+    .asset-section {
+        width: 394px;
+        margin: 10px;
+    }
+
+    .asset-heading {
+        font-size: 16px;
+        width: 364px;
+    }
+
+    .dropdown-asset {
+        margin-left: 0px;
+        width: 364px;
+    }
+
+    .drawer-title-display {
+        font-size: 16px;
+        font-weight: bolder;
+    }
+
+    .uploadContainer {
+        width: 364px;
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 375px) {
@@ -1523,6 +1552,35 @@ select {
     }
 
     .google-snippet {
+        font-size: 14px;
+    }
+
+    .asset {
+        width: 315px;
+    }
+
+    .asset-section {
+        width: 355px;
+        margin: 10px;
+    }
+
+    .asset-heading {
+        font-size: 16px;
+        width: 325px;
+    }
+
+    .dropdown-asset {
+        margin-left: 0px;
+        width: 325px;
+    }
+
+    .drawer-title-display {
+        font-size: 16px;
+        font-weight: bolder;
+    }
+
+    .uploadContainer {
+        width: 325px;
         font-size: 14px;
     }
 }
@@ -1670,6 +1728,35 @@ select {
     }
 
     .google-snippet {
+        font-size: 14px;
+    }
+
+    .asset {
+        width: 260px;
+    }
+
+    .asset-section {
+        width: 300px;
+        margin: 10px;
+    }
+
+    .asset-heading {
+        font-size: 16px;
+        width: 270px;
+    }
+
+    .dropdown-asset {
+        margin-left: 0px;
+        width: 270px;
+    }
+
+    .drawer-title-display {
+        font-size: 16px;
+        font-weight: bolder;
+    }
+
+    .uploadContainer {
+        width: 270px;
         font-size: 14px;
     }
 }
